--- a/force-app/main/default/lwc/todoBadge/todoBadge.html
+++ b/force-app/main/default/lwc/todoBadge/todoBadge.html
@@ -1,7 +1,8 @@
 <template>
-    <div class="todos slds-theme_default slds-border">
+    <div class="todos-badges slds-theme_default slds-border">
+        <lightning-progress-ring value={progress} class="slds-float_left slds-p-around_small" variant="base-autocomplete"></lightning-progress-ring>
         <template if:true={hasTodos}>
-            <div class="slds-text-heading_medium slds-p-around_small">Outstanding Todos: </div>
+            <div class="slds-text-heading_small slds-p-around_small">Outstanding Todos: </div>
             <div>
                 <ul class="slds-list_dotted slds-p-around_small">
                     <template for:each={outstandingTodos} for:item="todo">
@@ -12,7 +13,7 @@
             </div>
         </template>
         <template if:false={hasTodos}>
-            <div class="slds-text-heading_medium slds-p-around_small">No more todo!  You are all Good!</div>
+            <div class="slds-text-heading_small slds-p-around_small">No more todo!  You are all Good!</div>
         </template>
     </div>
 </template>
